--- a/index.html
+++ b/index.html
@@ -222,26 +222,26 @@
 
     <div class="container" id="divocultamuestra" style="display:none">
       <div class="row">
-        <form action="php/enviar.php" method="POST" class="col s12">
+        <form action="mail.php" method="post" class="col s12">
           <div class="row">
             <div class="input-field col s6">
-              <input id="nombre" type="text" class="validate">
+              <input id="nombre" type="text" name="nombre" class="validate">
               <label for="nombre">Nombre</label>
             </div>
             <div class="input-field col s6">
-              <input id="apellidos" type="text" class="validate">
+              <input id="apellidos" type="text" name="apellidos" class="validate">
               <label for="apellidos">Apellido</label>
             </div>
           </div>      
           <div class="row">
             <div class="input-field col s12">
-              <input id="email" type="email" class="validate">
+              <input id="email" type="email" name="correo" class="validate">
               <label for="email">Correo electrónico</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <textarea id="msj" class="materialize-textarea"></textarea>
+              <textarea id="msj" name="msj" class="materialize-textarea"></textarea>
               <label for="msj">Mensaje</label>
             </div>
           </div>
