--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
           </div>
           <div class="row">
             <div class="input-field col s12 center">
-              <a class="waves-effect waves-light btn" type="submit">Enviar</a>
+              <!-- <a class="waves-effect waves-light btn" type="submit">Enviar</a> -->
+              <button type="submit" class="btn">Enviar</button>
             </div>
           </div>
         </form>
