--- a/index.html
+++ b/index.html
@@ -224,31 +224,31 @@
       <div class="row">
         <form action="php/mail.php" method="post" class="col s12">
           <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s12">
               <input id="nombre" type="text" name="nombre" class="validate">
               <label for="nombre">Nombre</label>
             </div>
-            <div class="input-field col s6">
+            <!-- <div class="input-field col s6">
               <input id="apellidos" type="text" name="apellidos" class="validate">
               <label for="apellidos">Apellido</label>
-            </div>
+            </div> -->
           </div>      
           <div class="row">
             <div class="input-field col s12">
-              <input id="email" type="email" name="correo" class="validate">
+              <input id="email" type="email" name="email" class="validate">
               <label for="email">Correo electrónico</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <textarea id="msj" name="msj" class="materialize-textarea"></textarea>
-              <label for="msj">Mensaje</label>
+              <textarea id="message" name="message" class="materialize-textarea"></textarea>
+              <label for="message">Mensaje</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12 center">
               <!-- <a class="waves-effect waves-light btn" type="submit">Enviar</a> -->
-              <button type="submit" class="btn">Enviar</button>
+              <button type="submit" class="btn">Enviar</button> 
             </div>
           </div>
         </form>
