--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
         <div class="col s12 m8 valign-wrapper row-banner">
            <div class="col s4 m4">
             <div class="col m12 teal darken-1 img-web valign-wrapper banner-img z-depth-4">
-              <img src="img/desarrollo_web.png" class="responsive-img banner-svg" alt="">              
+              <img src="img/desarrollo_web2.0.png" class="responsive-img banner-svg" alt="">              
             </div>
            </div>
            <div class="col s4 m4">
               <div class="col m12 teal darken-1 img-design valign-wrapper banner-img z-depth-4">
-                <img src="img/diesño.png" class="responsive-img banner-svg" alt="">
+                <img src="img/diseño2.0.png" class="responsive-img banner-svg" alt="">
               </div>
            </div>
            <div class="col s4 m4">
             <div class="col m12 teal darken-1 img-branding valign-wrapper banner-img z-depth-4">
-              <img src="img/branding1.0.png" class="responsive-img banner-svg" alt=""> 
+              <img src="img/branding2.0.png" class="responsive-img banner-svg" alt=""> 
             </div>
            </div>
         </div>
