--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
     <div class="container" id="divocultamuestra" style="display:none">
       <div class="row">
-        <form action="php/mail.php" method="post" class="col s12">
+        <form action="https://formspree.io/f/xoqzrejg" method="post" class="col s12">
           <div class="row">
             <div class="input-field col s12">
               <input id="nombre" type="text" name="nombre" class="validate">
