--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <!-- <i class="material-icons"><span class="material-symbols-outlined">
                 textsms
                 </i> -->
-                <a href="https://wa.link/52mkzx" target="_blank" class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-1"><i class="material-icons">textsms</i></a>
+                <a href="https://wa.link/1he6oj" target="_blank" class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-1"><i class="material-icons">textsms</i></a>
             </div>
             <div class="col m6 offset-m6 label">
               <label class="black-text" for="">Whatsapp</label> 
